--- a/src/sass/_components.sass.scss
+++ b/src/sass/_components.sass.scss
@@ -77,6 +77,7 @@
 	right: calc(-200px);
 	opacity: 0;
 	visibility: hidden;
+	height: 0;
 	width: 200px;
 	transition: all 600ms;
 }
@@ -105,6 +106,7 @@
 .sidebar-active {
 	right: 0;
 	opacity: 1;
+	height: auto;
 	visibility: visible;
 }
 
